<resources>
    <string name="app_name">FirstApplication</string>
    <string name="background">Background</string>
    <string name="name">Name</string>
    <string name="palindrome">Palindrome</string>
    <string name="check">CHECK</string>
    <string name="next">NEXT</string>
    <string name="photo">Photo</string>
    <string name="ok">OK</string>
    <string name="is_palindrome">is Palindrome</string>
    <string name="not_palindrome">not Palindrome</string>
    <string name="name_is_empty">Name is empty</string>
    <string name="palindrome_is_empty">Palindrome is empty</string>
    <string name="second_screen">Second Screen</string>
    <string name="welcome">Welcome</string>
    <string name="choose_a_user">Choose a user</string>
    <string name="no_user_is_selected">No user is selected</string>
    <string name="third_screen">Third Screen</string>
    <string name="the_list_is_empty">The list is empty</string>
</resources>